--- a/pinterest/src/Components/Header/header.css
+++ b/pinterest/src/Components/Header/header.css
@@ -1,7 +1,3 @@
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 .home-header {
     height: 50px;
@@ -31,12 +27,37 @@ body {
 }
 
 .search-input {
-    width: 60%;
+    width: 100%;
     border-radius: 50px;
     padding: 10px;
     border: none;
     background-color: #f1f1f1;
     margin: 15px;
+}
+
+.search-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+    position: relative;
+}
+
+.search-container > button {
+    background-color: unset;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    right: 30px;
+}
+
+.logos-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px;
 }
 
 .logos-container {
@@ -47,4 +68,21 @@ body {
 .logos-container > img {
     width: 20px;
 
+}
+
+.menu-hamburger {
+    display: none;
+}
+
+.menu-container.hidden {
+    display: none;
+}
+
+.menu-container.visible {
+    width: 200px;
+    height: 400px;
+    background-color: white;
+    position: absolute;
+    right: 0;
+    top: 80px;
 }
