--- a/pinterest/src/Components/Cards/cards.css
+++ b/pinterest/src/Components/Cards/cards.css
@@ -19,8 +19,8 @@
 .gallery-track > .card {
     overflow: hidden;
     display: grid;
-    grid-template-columns: 1;
-    grid-template-rows: 1;
+    min-height: 200px;
+    position: relative;
 }
 
 .gallery-track > .card > img {
@@ -30,4 +30,46 @@
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
+    min-height: 200px;
+}
+
+.card-elements {
+    position: absolute;
+    min-height: 200px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card-elements > .card-elements-top {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    justify-content: space-between;
+    top: 10px;
+    padding-inline: 10px;
+}
+
+.card-elements > .card-elements-top > img {
+    background-color: gray;
+    padding: 5px;
+    border-radius: 28px;
+}
+
+.card-elements > .card-elements-bottom {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+.card-elements > .card-elements-bottom > img {
+    background-color: #ff5757;
+    padding: 3px;
+    border-radius: 35px;
+    position: relative;
+    bottom: 0;
+    height: 50px;
+    width: 50px;
 }
