--- a/pinterest/src/Components/Header/header.css
+++ b/pinterest/src/Components/Header/header.css
@@ -78,11 +78,29 @@
     display: none;
 }
 
-.menu-container.visible {
+.menu-container {
     width: 200px;
-    height: 400px;
+    height: 175px;
+    z-index: 1;
     background-color: white;
     position: absolute;
-    right: 0;
+    right: 20px;
     top: 80px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border-radius: 10px;
+}
+
+.inner-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+    padding: 18px;
+}
+
+.inner-menu > :first-child {
+    background-color: black;
+    color: white;
+    padding: 2px 12px;
+    border-radius: 15px;
 }
