--- a/pinterest/src/Components/Cards/cards.css
+++ b/pinterest/src/Components/Cards/cards.css
@@ -14,6 +14,7 @@
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fill, 200px);
     grid-auto-flow: dense;
+    justify-content: center;
 }
 
 .gallery-track > .card {
